# Google-Drive

./: .gitignore  README.md  grpc&protobuf.md
Client/: CMakeLists.txt  CharacterClient.cpp  CharacterClient.h  Client.pro  Client.pro.user.b1602cd.4.9-pre1  account.cpp  account.h  account.ui  condividi.cpp  condividi.h  condividi.ui  editor.cpp  editor.h  editor.ui  images.qrc  importa.cpp  importa.h  importa.ui  login.cpp  login.h  loginpage.cpp  loginpage.h  loginpage.ui  main.cpp  nuovo.cpp  nuovo.h  nuovo.ui  principale.cpp  principale.h  principale.ui  registrationpage.cpp  registrationpage.h  registrationpage.ui  scarica.ui  splashscreen.cpp  splashscreen.h  splashscreen.ui
Client/comunication/: AsyncClientCall.h  AsyncClientGetSymbols.cpp  AsyncClientGetSymbols.h  CharacterClient.cpp  CharacterClient.h  Message.cpp  Message.h  MyCustomAuthenticator.cpp  MyCustomAuthenticator.h  SharedEditor.cpp  SharedEditor.h  Symbol.cpp  Symbol.h
Client/qt/: condividi.ui  editor.cpp  importa.h  loginpage.h  nuovo.ui  principale.cpp  principale.ui  registrationpage.cpp  registrationpage.h  registrationpage.ui  scarica.cpp  scarica.h
Mqtt/: .cproject  .project  Mqtt.cpp
Mqtt-Ntp/: Mqtt-Ntp.ino
Server/: AbstractFileCallData.h  AbstractFileSubscribedCallData.h  AbstractSubscribedCallData.h  CMakeLists.txt  CallData.cpp  CallData.h  CharacterServiceImpl.cpp  CharacterServiceImpl.h  ConnectCallData.cpp  ConnectCallData.h  DeleteFileCallData.cpp  DeleteFileCallData.h  GetFileContentCallData.cpp  GetFileContentCallData.h  GetFilesCallData.cpp  GetFilesCallData.h  GetProfileCallData.cpp  GetProfileCallData.h  GetProfileInfoCallData.cpp  GetProfileInfoCallData.h  GetSymbolsCallData.cpp  GetSymbolsCallData.h  ImportFileCallData.cpp  ImportFileCallData.h  InsertFileCallData.cpp  InsertFileCallData.h  InsertSymbolsCallData.cpp  InsertSymbolsCallData.h  LoginCallData.cpp  LoginCallData.h  LogoutCallData.cpp  LogoutCallData.h  MyServiceAuthProcessor.cpp  MyServiceAuthProcessor.h  RegisterCallData.cpp  RegisterCallData.h  RemoveFileCallData.cpp  RemoveFileCallData.h  SetProfileCallData.cpp  SetProfileCallData.h  (+4 more)
certs/: certificate_readme.md  certtificate.sh  server.cert  server.key
es3_malnati/: CMakeLists.txt  Message.cpp  Message.h  NetworkServer.cpp  NetworkServer.h  SharedEditor.cpp  SharedEditor.h  Symbol.cpp  Symbol.h  definitions.h  main.cpp
protos/: messageP.proto
